# glasses-ai

./: README.md  detect_live.py  pyproject.toml  test_capture.py
